# brainfucppk

./: .gitmodules  BrainfuckInterpreter.sln  CMakeLists.txt  README.md
.github/workflows/: msvc.yml
BrainfuckInterpreter/: BrainfuckInterpreter.cpp  BrainfuckInterpreter.hpp  BrainfuckInterpreter.vcxproj  BrainfuckInterpreter.vcxproj.filters  UCException.cpp  UCException.hpp  main.cpp
BrainfuckInterpreter/resources/implementations/: bf_standard.json
BrainfuckInterpreter/resources/scripts/: hello_world.json
BrainfuckInterpreter/src/: BfConfiguration.hpp  BfImplementation.cpp  BfImplementation.hpp  BfInterpreter.cpp  BfInterpreter.hpp  BfTokens.hpp  BrainfuckAttributes.hpp  BrainfuckInterpreter.cpp  BrainfuckInterpreter.hpp  ExceptionHandlers.hpp  StandardBfImplementation.cpp  StandardBfInterpretation.cpp  StandardBfInterpretation.hpp  main.cpp
BrainfuckInterpreter/src/core/: BfConfiguration.cpp  BfImplementation.cpp  BfImplementation.hpp  BfInterpreter.cpp  BfInterpreter.hpp  BfTokens.hpp
BrainfuckInterpreter/src/implementations/: Ext1BfImplementation.cpp  Ext1BfImplementation.hpp  ExtendedBfImplementation.cpp  ExtendedBfImplementation.hpp  StandardBfImplementation.cpp  StandardBfImplementation.hpp
SingleFile/: main.cpp
application/: CMakeLists.txt
application/include/: BrainfuckProject.hpp  ProjectInterpreter.hpp
application/resources/scripts/: hello_world.json
application/src/: BrainfuckProject.cpp  ProjectInterpreter.cpp  main.cpp
brainfucppk/: CMakeLists.txt
brainfucppk/include/core/: BfErrors.hpp  BfImplementation.hpp  BfInterpreter.hpp  Config.hpp  Errors.hpp  Implementation.hpp  Interpreter.hpp
brainfucppk/include/implementations/: Ext1BfImplementation.hpp  Ext1Implementation.hpp  StandardBfImplementation.hpp  StandardImplementation.hpp
brainfucppk/include/utility/: FileData.hpp  Noncopyable.hpp  SemanticVersion.hpp  WarpableIterator.hpp  WarpableIterator.inl
brainfucppk/src/core/: BfErrors.cpp  BfImplementation.cpp  BfInterpreter.cpp  Errors.cpp  Implementation.cpp  Interpreter.cpp
brainfucppk/src/implementations/: Ext1BfImplementation.cpp  Ext1Implementation.cpp  StandardBfImplementation.cpp  StandardImplementation.cpp
brainfucppk/src/utility/: FileData.cpp  SemanticVersion.cpp
brainfucppk/test/: CMakeLists.txt  SemanticVersionTest.cpp
